fix : 修改個網帶上網址參數

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -370,6 +370,7 @@
                     success: function (resp) {
                         console.log(resp)
                         let postDataUrl = '@AppPayLoginUrl';
+                        postDataUrl = postDataUrl + `?merchantId=${resp.merchantId}&txReqId=${resp.txReqId}&sign=${resp.sign}`;
                         let postdata =
                         {
                             merchantId: resp.merchantId,
