Update: 驗證 dataSourceItem 的 templeateid

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FeaturedCards/FeaturedCards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FeaturedCards/FeaturedCards.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.FeaturedCards
 @model FeaturedCardsModel
 
-@if (Model == null)
+@if (Model == null || !Model.IsValid)
 {
     return;
 }
