--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsDetail.cshtml
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="c-article__content">
-            <div class="c-section">
+            <div class="c-section c-section--scroller">
                 <div class="l-paragraph" id="newsContent">
 
                 </div>
